<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_change_password_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="130dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_password_til_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/colorPrimary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:passwordToggleTint="@color/colorPrimary"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_password_et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_password_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_password_et_password"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_password_til_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_password_et_new_password"
            android:layout_height="50dp"
            android:hint="@string/new_password"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_password_til_confirm_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_password_et_confirm_new_password"
            android:layout_height="50dp"
            android:hint="@string/confirm_new_password"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_change_password_btn_update"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/update_btn"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"/>

</LinearLayout>