<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_music_rl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PlayMusicActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_play_music_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/activity_play_music_vp_discography"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/activity_play_music_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <RelativeLayout
        android:id="@+id/activity_play_music_rl_song_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_play_music_vp_discography"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/activity_play_music_tv_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="310dp"
            android:text="@string/song_name"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/activity_play_music_tv_singer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_play_music_tv_song_name"
            android:layout_marginTop="10dp"
            android:maxWidth="350dp"
            android:text="@string/singer_name"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <ImageView
            android:id="@+id/activity_play_music_iv_love_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_love"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

    </RelativeLayout>

    <SeekBar
        android:id="@+id/activity_play_music_sb_song_time"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/activity_play_music_rl_song_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:progressTint="#403F3F"
        android:thumb="@drawable/ic_radio_button"/>

    <RelativeLayout
        android:id="@+id/activity_play_music_rl_song_time_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_play_music_sb_song_time"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/activity_play_music_tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/activity_play_music_tv_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_time"
            android:layout_alignParentEnd="true"
            android:textSize="18dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_play_music_rl_song_actions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/activity_play_music_rl_song_time_number">

        <ImageButton
            android:id="@+id/activity_play_music_ib_shuffle_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/activity_play_music_ib_back_song"
            android:scaleType="fitXY"
            android:src="@drawable/ic_shuffle"/>

        <ImageButton
            android:id="@+id/activity_play_music_ib_back_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/activity_play_music_ib_play_and_pause_song"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back_song"/>

        <ImageButton
            android:id="@+id/activity_play_music_ib_play_and_pause_song"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_play_button" />

        <ImageButton
            android:id="@+id/activity_play_music_ib_next_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/activity_play_music_ib_play_and_pause_song"
            android:src="@drawable/ic_next_song"
            android:scaleType="fitXY"/>

        <ImageButton
            android:id="@+id/activity_play_music_ib_repeat_song"
            android:layout_width="45dp"
            android:layout_height="43dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/activity_play_music_ib_next_song"
            android:scaleType="fitXY"
            android:src="@drawable/ic_repeat_song"/>

    </RelativeLayout>

</RelativeLayout>